--- a/index.html
+++ b/index.html
@@ -1,6 +1,75 @@
-<table border="0">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=640">
+
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>R7629.GitHub.io by tt7-ssd-kyu7</title>
+  </head>
+
+  <body>
+    <a id="forkme_banner" href="https://github.com/tt7-ssd-kyu7/R7629.github.io">View on GitHub</a>
+    <div class="shell">
+
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>R7629.GitHub.io</h1>
+            <h2>欣狗定义</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
+
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/tt7-ssd-kyu7/R7629.github.io/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/tt7-ssd-kyu7/R7629.github.io/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
+
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
+        <table border="0">
    <tr>
       <h1></h1>
       <p><b>欣大墩</b></p>
       <p><b>乃瘤狗</b></p>
       <p><b>之逆子</b></p>
+</tr>
+</table>
+      </section>
+
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/tt7-ssd-kyu7">tt7-ssd-kyu7</a> can be found on <a href="https://github.com/tt7-ssd-kyu7/R7629.github.io">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
+      </footer>
+
+    </div>
+
+    
+  </body>
+</html>
