--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>R7629.GitHub.io by tt7-ssd-kyu7</title>
+    <title></title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/tt7-ssd-kyu7/R7629.github.io">View on GitHub</a>
+    <a id="forkme_banner" href="https://github.com/tt7-ssd-kyu7/R7629.github.io"></a>
     <div class="shell">
 
       <header>
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/tt7-ssd-kyu7/R7629.github.io/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/tt7-ssd-kyu7/R7629.github.io/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/tt7-ssd-kyu7/R7629.github.io/zipball/master" class="zip"><em></em></a><a href="https://github.com/tt7-ssd-kyu7/R7629.github.io/tarball/master" class="tgz"><em></em> </a>
         </span>
       </section>
 
