--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </section>
 
     <section class="main-content">
-      <p>刘业欣是傻逼</p>
-<p>肥硕的欣狗呀</p>
-<p>龟墩霸王欣</p>
+      <p>欣大墩</p>
+<p>乃瘤狗</p>
+<p>之逆子</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/tt7-ssd-kyu7/R7629.github.io">R7629.GitHub.io</a> is maintained by <a href="https://github.com/tt7-ssd-kyu7">tt7-ssd-kyu7</a>.</span>
