--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
     <section class="main-content">
       <p>欣大墩</p>
-<p>乃瘤狗</p>
-<p>之逆子</p>
+      <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/7ED74065EDD212CA4C0794F89AF6934D.png" alt="a"></p>
+      <p>乃瘤狗</p>
+      <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" alt="a"></p>
+      <p>之逆子</p>
 
       
 
