--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>刘业狗 by tt7-ssd-kyu7</title>
+    <title>轩爸之网</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -20,10 +20,10 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/tt7-ssd-kyu7/R7629.github.io">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/tt7-ssd-kyu7/R7629.github.io/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/tt7-ssd-kyu7/R7629.github.io/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
+          <li class="fork"><a href="https://github.com/tt7-ssd-kyu7/R7629.github.io"></a></li>
+          <li class=""><a href="https://github.com/tt7-ssd-kyu7/R7629.github.io/zipball/master"></a></li>
+          <li class=""><a href="https://github.com/tt7-ssd-kyu7/R7629.github.io/tarball/master"></a></li>
+          <li class="title"></li>
         </nav>
       </div><!-- end header -->
 
@@ -34,8 +34,7 @@
           <h1>刘业狗</h1>
           <p></p>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/tt7-ssd-kyu7">tt7-ssd-kyu7</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          
         </div>
 
         <table>
@@ -43,7 +42,9 @@
     <h1>
 <a id="刘狗欣" class="anchor" href="#%E5%88%98%E7%8B%97%E6%AC%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>刘狗欣</h1>
     <p><b>欣大墩</b></p>
+    <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/7ED74065EDD212CA4C0794F89AF6934D.png" alt="a"></p>
     <p><b>乃瘤狗</b></p>
+    <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" alt="a"></p>
     <p><b>之逆子</b></p>
 </tr>
 </table>
