--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>轩爸之网</title>
+    <title>娇美欣狗墩</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <link rel="icon" href="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/img/tultle.ico" sizes="32x32">
