--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>娇美欣狗墩</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <link rel="icon" href="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/img/pig.ico" sizes="32x32">
+    <link rel="icon" href="http://chuantu.xyz/t6/739/1595044389x-1224475230.jpg" sizes="32x32">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
@@ -40,9 +40,9 @@
     <h1>
 <a id="刘狗欣" class="anchor" href="#%E5%88%98%E7%8B%97%E6%AC%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>刘狗欣</h1>
     <p><b>欣大墩</b></p>
-    <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/7ED74065EDD212CA4C0794F89AF6934D.png" alt="a"></p>
+    <p><img src="http://chuantu.xyz/t6/739/1595044471x992248267.png" alt="a"></p>
     <p><b>乃瘤狗</b></p>
-    <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" alt="a"></p>
+    <p><img src="http://chuantu.xyz/t6/739/1595044389x-1224475230.jpg" alt="a"></p>
     <p><b>之逆子</b></p>
 </tr>
 </table>
